--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 blinker==1.9.0
 click==8.3.1
+dnspython==2.8.0
+dotenv==0.9.9
+email_validator==2.1.1
 Flask==3.1.2
+Flask-WTF==1.2.1
+gunicorn==25.0.1
+idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
-Werkzeug==3.1.5
+packaging==26.0
 pymongo==4.10.1
 python-dotenv==1.0.1
-Flask-WTF==1.2.1
-email-validator==2.1.1
+Werkzeug==3.1.5
+WTForms==3.2.1
