--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==26.0
+pillow==10.4.0
 pymongo==4.10.1
 python-dotenv==1.0.1
 Werkzeug==3.1.5
